--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.8",
+    "react-select": "^5.7.4",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
