--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.10.3",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
